Agregando un minimo en contentInfo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,7 @@ section>div{
     align-items: center;
     justify-content: center;
     max-width: 800px;
+    min-width: 331px;
     height: 100%;
     background-color: rgba(2, 2, 2, 0.616);
     border: 10px inset rgb(58, 58, 58);
